Build custom JRE 17 image using jlink
Since the custom runtime is smaller, the final image
is about 100MB smaller than a full JDK image.